--- a/eventex/core/templates/core/speaker_detail.html
+++ b/eventex/core/templates/core/speaker_detail.html
@@ -6,7 +6,7 @@
             <h2>
                 <a href="{{ speaker.website }}">{{ speaker.name }}</a>
             </h2>
-            <img class="phot" src="{{ speaker.photo }}">
+            <img class="photo" src="{{ speaker.photo }}">
             <p>
                 {{ speaker.description|linebreaks }}
             </p>
